fixing compilation warning and adding flush logs to test of bug#37313